--- a/battleships-front/battleships-front/package.json
+++ b/battleships-front/battleships-front/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.14.0",
     "@mantine/core": "^7.15.1",
     "@mantine/hooks": "^7.15.1",
+    "@mantine/notifications": "^7.15.1",
     "axios": "^1.7.9",
+    "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
